--- a/jupyter/trabalho-etapa02.ipynb
+++ b/jupyter/trabalho-etapa02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,89 +13,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisando o Uso de Medicamentos\n",
-    "* Esta tarefa analisará os dados conforme três abordagens: análise do comportamento estatístico; análise de correlação entre pares; análise de correlação de variáveis.\n",
-    "* A partir dos arquivos CSV que estão no diretórios /data/nhanes considere as seguintes tabelas SQL."
+    "# Analisando o Risco de um Usuário utilizar Drogas Ilícitas\n",
+    "* Esta tarefa demonstrará o processo do desenvolvimento do sistema capaz de analizar o risco de um usuário utilizar drogas ilícitas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Modelo Conceitual: ER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Modelo Conceitual Entidade Relacionamento](ModeloConceitualER.png \"ER\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Modelo Conceitual: UML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Modelo Conceitual UML](ModeloConceitualUML.png \"UML\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A partir do arquivo CSV que está no diretório /data considere as seguintes tabelas SQL."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CREATE TABLE Pessoa (\n",
-    "  Id VARCHAR(5) NOT NULL,\n",
-    "  Genero INTEGER,\n",
-    "  Idade INTEGER,\n",
-    "  PRIMARY KEY(Id)\n",
+    "CREATE TABLE Teste (\n",
+    "    Id VARCHAR(5) NOT NULL,\n",
+    "    Age VARCHAR(10) NOT NULL,\n",
+    "    Gender VARCHAR(10) NOT NULL,\n",
+    "    Education VARCHAR(10) NOT NULL,\n",
+    "    Country VARCHAR(10) NOT NULL,\n",
+    "    Ethnicity VARCHAR(10) NOT NULL,\n",
+    "    Nscore VARCHAR(10) NOT NULL,\n",
+    "    Escore VARCHAR(10) NOT NULL,\n",
+    "    Oscore VARCHAR(10) NOT NULL,\n",
+    "    Ascore VARCHAR(10) NOT NULL,\n",
+    "    Cscore VARCHAR(10) NOT NULL,\n",
+    "    Impulsive  VARCHAR(10) NOT NULL,\n",
+    "    SS  VARCHAR(10) NOT NULL,\n",
+    "    Alcohol  VARCHAR(4) NOT NULL,\n",
+    "    Amphet VARCHAR(4) NOT NULL,\n",
+    "    Amyl VARCHAR(4) NOT NULL,\n",
+    "    Benzos VARCHAR(4) NOT NULL,\n",
+    "    Caff VARCHAR(4) NOT NULL,\n",
+    "    Cannabis VARCHAR(4) NOT NULL,\n",
+    "    Choc VARCHAR(4) NOT NULL,\n",
+    "    Coke VARCHAR(4) NOT NULL,\n",
+    "    Crack VARCHAR(4) NOT NULL,\n",
+    "    Ecstasy VARCHAR(4) NOT NULL,\n",
+    "    Herion VARCHAR(4) NOT NULL,\n",
+    "    Ketamine VARCHAR(4) NOT NULL,\n",
+    "    Legalh VARCHAR(4) NOT NULL,\n",
+    "    LSD VARCHAR(4) NOT NULL,\n",
+    "    Meth VARCHAR(4) NOT NULL,\n",
+    "    Mushrooms VARCHAR(4) NOT NULL,\n",
+    "    Nicotine VARCHAR(4) NOT NULL,\n",
+    "    Semer VARCHAR(4) NOT NULL,\n",
+    "    VSA VARCHAR(4) NOT NULL,\n",
+    "    PRIMARY KEY(Id)\n",
     ") AS SELECT\n",
     "    Id,\n",
-    "    Genero,\n",
-    "    Idade\n",
-    "FROM CSVREAD('../data/nhanes/demographic-person.csv');\n",
-    "\n",
-    "CREATE TABLE Medicamento (\n",
-    "  Codigo VARCHAR(6) NOT NULL,\n",
-    "  NomeMedicamento VARCHAR(100) NOT NULL,\n",
-    "  PRIMARY KEY(Codigo)\n",
-    ") AS SELECT\n",
-    "    Codigo,\n",
-    "    NomeMedicamento\n",
-    "FROM CSVREAD('../data/nhanes/medications-drug.csv');\n",
-    "\n",
-    "CREATE TABLE UsoMedicamento (\n",
-    "  IdPessoa VARCHAR(5) NOT NULL,\n",
-    "  CodMedicamento VARCHAR(6) NOT NULL,\n",
-    "  DiasUso INTEGER,\n",
-    "  FOREIGN KEY(IdPessoa)\n",
-    "    REFERENCES Pessoa(Id)\n",
-    "      ON DELETE NO ACTION\n",
-    "      ON UPDATE NO ACTION,\n",
-    "  FOREIGN KEY(CodMedicamento)\n",
-    "    REFERENCES Medicamento(Codigo)\n",
-    "      ON DELETE NO ACTION\n",
-    "      ON UPDATE NO ACTION\n",
-    ") AS SELECT\n",
-    "    IdPessoa,\n",
-    "    CodMedicamento,\n",
-    "    DiasUso\n",
-    "FROM CSVREAD('../data/nhanes/medications-use.csv');"
+    "    Age,\n",
+    "    Gender,\n",
+    "    Education,\n",
+    "    Country,\n",
+    "    Ethnicity,\n",
+    "    Nscore,\n",
+    "    Escore,\n",
+    "    Oscore,\n",
+    "    Ascore,\n",
+    "    Cscore,\n",
+    "    Impulsive,\n",
+    "    SS,\n",
+    "    Alcohol,\n",
+    "    Amphet,\n",
+    "    Amyl,\n",
+    "    Benzos,\n",
+    "    Caff,\n",
+    "    Cannabis,\n",
+    "    Choc,\n",
+    "    Coke,\n",
+    "    Crack,\n",
+    "    Ecstasy,\n",
+    "    Herion,\n",
+    "    Ketamine,\n",
+    "    Legalh,\n",
+    "    LSD,\n",
+    "    Meth,\n",
+    "    Mushrooms,\n",
+    "    Nicotine,\n",
+    "    Semer,\n",
+    "    VSA\n",
+    "FROM CSVREAD('../data/drug_consumption.csv');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c23c7a40-9990-47dd-b973-bc7be73be056",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1ae54eb-aaaa-4c97-8830-3a339bdb653b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37702284-4b2d-4a3b-9252-52a51ea05c9d",
+       "model_id": "4235f4ef-0132-4370-95b7-b165a00d0479",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,9 +147,7 @@
     }
    ],
    "source": [
-    "SELECT * FROM Pessoa;\n",
-    "SELECT * FROM Medicamento;\n",
-    "SELECT * FROM UsoMedicamento;"
+    "SELECT * FROM Teste;"
    ]
   },
   {
@@ -629,6 +668,19 @@
    "name": "SQL",
    "nbconverter_exporter": "",
    "version": ""
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
