--- a/jupyter/trabalho-etapa02.ipynb
+++ b/jupyter/trabalho-etapa02.ipynb
@@ -49,12 +49,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Modelo Lógico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Usuario(\\_id\\_, idade, sexo, nívelEducação, nacionalidade, etnia);<br/><br/>\n",
+    "Personalidade(\\_user_id\\_, pontuaçãoN, pontuaçãoE, pontuaçãoO, pontuaçãoA, pontuaçãoC, impulsividade, pontuaçãoSS);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "RiscoUso_ilícitas(\\_user_id\\_, geral, amphetamines, amyl_nitrite, benzodiazepine, cannabis, cocaine, crack, ecstasy, heroin, ketamine, legal_highs, LSD, methadone, mushrooms, VSA);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Alcohol(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Amphetamines(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Amyl_nitrite(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Benzodiazepine(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Cannabis(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Chocolate(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Cocaine(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Caffeine(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Crack(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Ecstasy(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Heroin(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "LSD(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Methadone(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Mushrooms(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "Nicotine(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>\n",
+    "VSA(\\_user_id\\_, consumo);<br/>\n",
+    "FK: user_id -> id em Usuario;<br/><br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* A partir do arquivo CSV que está no diretório /data considere as seguintes tabelas SQL."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +180,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE TABLE Usuario (\n",
+    "    Id VARCHAR(5) NOT NULL,\n",
+    "    Age VARCHAR(10) NOT NULL,\n",
+    "    Gender VARCHAR(10) NOT NULL,\n",
+    "    Education VARCHAR(10) NOT NULL,\n",
+    "    Country VARCHAR(10) NOT NULL,\n",
+    "    Ethnicity VARCHAR(10) NOT NULL,\n",
+    "    PRIMARY KEY(Id)\n",
+    ") AS SELECT\n",
+    "    Id,\n",
+    "    Age,\n",
+    "    Gender,\n",
+    "    Education,\n",
+    "    Country,\n",
+    "    Ethnicity\n",
+    "FROM CSVREAD('../data/drug_consumption.csv');\n",
+    "\n",
+    "CREATE TABLE Personalidade (\n",
+    "    User_Id VARCHAR(5) NOT NULL,\n",
+    "    Nscore VARCHAR(10) NOT NULL,\n",
+    "    Escore VARCHAR(10) NOT NULL,\n",
+    "    Oscore VARCHAR(10) NOT NULL,\n",
+    "    Ascore VARCHAR(10) NOT NULL,\n",
+    "    Cscore VARCHAR(10) NOT NULL,\n",
+    "    Impulsive  VARCHAR(10) NOT NULL,\n",
+    "    SS  VARCHAR(10) NOT NULL,\n",
+    "    FOREIGN KEY(User_Id)\n",
+    "        REFERENCES Usuario(Id)\n",
+    "            ON DELETE NO ACTION\n",
+    "            ON UPDATE NO ACTION\n",
+    ") AS SELECT\n",
+    "    User_Id\n",
+    "    Nscore,\n",
+    "    Escore,\n",
+    "    Oscore,\n",
+    "    Ascore,\n",
+    "    Cscore,\n",
+    "    Impulsive,\n",
+    "    SS\n",
+    "FROM CSVREAD('../data/drug_consumption.csv');\n",
+    "\n",
+    "CREATE TABLE Consumo (\n",
+    "    User_Id VARCHAR(5) NOT NULL,\n",
+    "    Alcohol  VARCHAR(4) NOT NULL,\n",
+    "    Amphet VARCHAR(4) NOT NULL,\n",
+    "    Amyl VARCHAR(4) NOT NULL,\n",
+    "    Benzos VARCHAR(4) NOT NULL,\n",
+    "    Caff VARCHAR(4) NOT NULL,\n",
+    "    Cannabis VARCHAR(4) NOT NULL,\n",
+    "    Choc VARCHAR(4) NOT NULL,\n",
+    "    Coke VARCHAR(4) NOT NULL,\n",
+    "    Crack VARCHAR(4) NOT NULL,\n",
+    "    Ecstasy VARCHAR(4) NOT NULL,\n",
+    "    Herion VARCHAR(4) NOT NULL,\n",
+    "    Ketamine VARCHAR(4) NOT NULL,\n",
+    "    Legalh VARCHAR(4) NOT NULL,\n",
+    "    LSD VARCHAR(4) NOT NULL,\n",
+    "    Meth VARCHAR(4) NOT NULL,\n",
+    "    Mushrooms VARCHAR(4) NOT NULL,\n",
+    "    Nicotine VARCHAR(4) NOT NULL,\n",
+    "    Semer VARCHAR(4) NOT NULL,\n",
+    "    VSA VARCHAR(4) NOT NULL,\n",
+    "    FOREIGN KEY(User_Id)\n",
+    "        REFERENCES Usuario(Id)\n",
+    "            ON DELETE NO ACTION\n",
+    "            ON UPDATE NO ACTION\n",
+    ") AS SELECT\n",
+    "    User_Id,\n",
+    "    Alcohol,\n",
+    "    Amphet,\n",
+    "    Amyl,\n",
+    "    Benzos,\n",
+    "    Caff,\n",
+    "    Cannabis,\n",
+    "    Choc,\n",
+    "    Coke,\n",
+    "    Crack,\n",
+    "    Ecstasy,\n",
+    "    Herion,\n",
+    "    Ketamine,\n",
+    "    Legalh,\n",
+    "    LSD,\n",
+    "    Meth,\n",
+    "    Mushrooms,\n",
+    "    Nicotine,\n",
+    "    Semer,\n",
+    "    VSA\n",
+    "FROM CSVREAD('../data/drug_consumption.csv');"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -147,7 +293,7 @@
     }
    ],
    "source": [
-    "SELECT * FROM Teste;"
+    "SELECT * FROM Usuario, Personalidade, Consumo WHERE Usuario.Id = Personalidade.User_Id AND Usuario.Id = Consumo.User_Id;"
    ]
   },
   {
