--- a/jupyter/trabalho-etapa03.ipynb
+++ b/jupyter/trabalho-etapa03.ipynb
@@ -28,21 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Modelo Conceitual Entidade Relacionamento](ModeloConceitualER.png \"ER\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Modelo Conceitual: UML"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Modelo Conceitual UML](ModeloConceitualUML.png \"UML\")"
+    "![Modelo Conceitual Entidade Relacionamento](ModeloConceitualAdaptado.png \"ER\")"
    ]
   },
   {
@@ -56,150 +42,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usuario(\\_id\\_, idade, sexo, nívelEducação, nacionalidade, etnia);<br/><br/>\n",
-    "Personalidade(\\_user_id\\_, pontuaçãoN, pontuaçãoE, pontuaçãoO, pontuaçãoA, pontuaçãoC, impulsividade, pontuaçãoSS);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "RiscoUso_ilícitas(\\_user_id\\_, geral, amphetamines, amyl_nitrite, benzodiazepine, cannabis, cocaine, crack, ecstasy, heroin, ketamine, legal_highs, LSD, methadone, mushrooms, VSA);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Alcohol(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Amphetamines(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Amyl_nitrite(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Benzodiazepine(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Cannabis(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Chocolate(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Cocaine(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Caffeine(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Crack(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Ecstasy(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Heroin(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "LSD(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Methadone(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Mushrooms(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "Nicotine(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>\n",
-    "VSA(\\_user_id\\_, consumo);<br/>\n",
-    "FK: user_id -> id em Usuario;<br/><br/>"
+    "![Modelo Lógico](ModeloLogico.png \"ER\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A partir do arquivo CSV que está no diretório /data considere as seguintes tabelas SQL."
+    "* A partir do arquivo CSV que está no diretório /data considere as seguintes queries Cypher que produzem o grafo de dados:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "DROP TABLE Usuario IF EXISTS;\n",
-    "DROP TABLE Personalidade IF EXISTS;\n",
-    "DROP TABLE Consumo IF EXISTS;\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "CREATE (:User {Id: line.Id, Age: line.Age, Gender: line.Gender, Education: line.Education, Country: line.Country, Ethnicity: <br/>line.Ethnicity, Nscore: line.Nscore, Escore: line.Escore, Oscore: line.Oscore, Ascore: line.Ascore, Cscore: line.Cscore, I: line.Impulsive, SS: line.SS})\n",
     "\n",
-    "CREATE TABLE Usuario (\n",
-    "    Id VARCHAR(5) NOT NULL,\n",
-    "    Age FLOAT NOT NULL,\n",
-    "    Gender VARCHAR(10) NOT NULL,\n",
-    "    Education FLOAT NOT NULL,\n",
-    "    Country FLOAT NOT NULL,\n",
-    "    Ethnicity VARCHAR(10) NOT NULL,\n",
-    "    PRIMARY KEY(Id)\n",
-    ") AS SELECT\n",
-    "    Id,\n",
-    "    Age,\n",
-    "    Gender,\n",
-    "    Education,\n",
-    "    Country,\n",
-    "    Ethnicity\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');\n",
+    "CREATE (:Substance {nome: \"Alcohol\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Amphet\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Amyl\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Benzos\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Caff\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Cannabis\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Choc\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Coke\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Crack\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Ectasy\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Herion\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Ketamine\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Legalh\"})<br/>\n",
+    "CREATE (:Substance {nome: \"LSD\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Meth\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Mushrooms\"})<br/>\n",
+    "CREATE (:Substance {nome: \"Nicotine\"})<br/>\n",
+    "CREATE (:Substance {nome: \"VSA\"})<br/>\n",
     "\n",
-    "CREATE TABLE Personalidade (\n",
-    "    User_Id VARCHAR(5) NOT NULL,\n",
-    "    Nscore VARCHAR(10) NOT NULL,\n",
-    "    Escore VARCHAR(10) NOT NULL,\n",
-    "    Oscore VARCHAR(10) NOT NULL,\n",
-    "    Ascore VARCHAR(10) NOT NULL,\n",
-    "    Cscore VARCHAR(10) NOT NULL,\n",
-    "    Impulsive  VARCHAR(10) NOT NULL,\n",
-    "    SS  VARCHAR(10) NOT NULL,\n",
-    "    FOREIGN KEY(User_Id)\n",
-    "        REFERENCES Usuario(Id)\n",
-    "            ON DELETE NO ACTION\n",
-    "            ON UPDATE NO ACTION\n",
-    ") AS SELECT\n",
-    "    Id,\n",
-    "    Nscore,\n",
-    "    Escore,\n",
-    "    Oscore,\n",
-    "    Ascore,\n",
-    "    Cscore,\n",
-    "    Impulsive,\n",
-    "    SS\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');\n",
-    "\n",
-    "CREATE TABLE Consumo (\n",
-    "    User_Id VARCHAR(5) NOT NULL,\n",
-    "    Alcohol  VARCHAR(4) NOT NULL,\n",
-    "    Amphet VARCHAR(4) NOT NULL,\n",
-    "    Amyl VARCHAR(4) NOT NULL,\n",
-    "    Benzos VARCHAR(4) NOT NULL,\n",
-    "    Caff VARCHAR(4) NOT NULL,\n",
-    "    Cannabis VARCHAR(4) NOT NULL,\n",
-    "    Choc VARCHAR(4) NOT NULL,\n",
-    "    Coke VARCHAR(4) NOT NULL,\n",
-    "    Crack VARCHAR(4) NOT NULL,\n",
-    "    Ecstasy VARCHAR(4) NOT NULL,\n",
-    "    Heroin VARCHAR(4) NOT NULL,\n",
-    "    Ketamine VARCHAR(4) NOT NULL,\n",
-    "    Legalh VARCHAR(4) NOT NULL,\n",
-    "    LSD VARCHAR(4) NOT NULL,\n",
-    "    Meth VARCHAR(4) NOT NULL,\n",
-    "    Mushrooms VARCHAR(4) NOT NULL,\n",
-    "    Nicotine VARCHAR(4) NOT NULL,\n",
-    "    Semer VARCHAR(4) NOT NULL,\n",
-    "    VSA VARCHAR(4) NOT NULL,\n",
-    "    FOREIGN KEY(User_Id)\n",
-    "        REFERENCES Usuario(Id)\n",
-    "            ON DELETE NO ACTION\n",
-    "            ON UPDATE NO ACTION\n",
-    ") AS SELECT\n",
-    "    Id,\n",
-    "    Alcohol,\n",
-    "    Amphet,\n",
-    "    Amyl,\n",
-    "    Benzos,\n",
-    "    Caff,\n",
-    "    Cannabis,\n",
-    "    Choc,\n",
-    "    Coke,\n",
-    "    Crack,\n",
-    "    Ecstasy,\n",
-    "    Herion,\n",
-    "    Ketamine,\n",
-    "    Legalh,\n",
-    "    LSD,\n",
-    "    Meth,\n",
-    "    Mushrooms,\n",
-    "    Nicotine,\n",
-    "    Semer,\n",
-    "    VSA\n",
-    "FROM CSVREAD('../data/drug_consumption.csv');"
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Alcohol <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Alcohol\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Alcohol}]->(sub)<br/>\n",
+    "LOAD CSV WITH HEADERS FROM 'https://github.com/helderbetiol/bd_drugs/raw/master/data/drug_consumption.csv' AS line<br/>\n",
+    "MATCH (user:User {Id:line.Id}) WHERE line.Amphet <> \"CL0\"<br/>\n",
+    "MATCH (sub:Substance {nome: \"Amphet\"})<br/>\n",
+    "CREATE (user)-[:Uses {frequency: line.Amphet}]->(sub)<br/>"
    ]
   },
   {
@@ -405,24 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Tornando as informações mais claras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "UPDATE Usuario SET Gender = 'F' WHERE Gender = '0.48246';\n",
-    "UPDATE Usuario SET Gender = 'M' WHERE Gender = '-0.48246';"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# I. Consultas SQL\n"
+    "# I. Consultas Cypher\n"
    ]
   },
   {
@@ -436,211 +305,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Número de pessoas que já usaram alguma droga alguma vez na vida, com a porcentagem sobre o total."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee6a03a-8ef6-4732-8a10-ae4cecbc889a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "DROP TABLE IF EXISTS ConsumedAtLeastOnce;\n",
-    "CREATE TABLE ConsumedAtLeastOnce (\n",
-    "\tName VARCHAR(20),\n",
-    "\tAtLeastOnce INT,\n",
-    "\tPercentage FLOAT\n",
-    ");\n",
-    "\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Amphetamine');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Alcohol');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Amyl_nitrite');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Benzodiazepine');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Cannabis');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Chocolate');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Cocaine');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Caffeine');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Crack');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Ecstasy');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Heroin');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('LSD');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Mushrooms');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('Nicotine');\n",
-    "INSERT INTO ConsumedAtLeastOnce (Name) VALUES ('VSA');\n",
-    "\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Amphet <> 'CL0')\n",
-    "WHERE Name = 'Amphetamine';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Alcohol <> 'CL0')\n",
-    "WHERE Name = 'Alcohol';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Amyl <> 'CL0')\n",
-    "WHERE Name = 'Amyl_nitrite';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Benzos <> 'CL0')\n",
-    "WHERE Name = 'Benzodiazepine';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Cannabis <> 'CL0')\n",
-    "WHERE Name = 'Cannabis';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Choc <> 'CL0')\n",
-    "WHERE Name = 'Chocolate';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Coke <> 'CL0')\n",
-    "WHERE Name = 'Cocaine';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Caff <> 'CL0')\n",
-    "WHERE Name = 'Caffeine';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Crack <> 'CL0')\n",
-    "WHERE Name = 'Crack';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Ecstasy <> 'CL0')\n",
-    "WHERE Name = 'Ecstasy';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Heroin <> 'CL0')\n",
-    "WHERE Name = 'Heroin';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE LSD <> 'CL0')\n",
-    "WHERE Name = 'LSD';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Mushrooms <> 'CL0')\n",
-    "WHERE Name = 'Mushrooms';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE Nicotine <> 'CL0')\n",
-    "WHERE Name = 'Nicotine';\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET AtLeastOnce = (SELECT COUNT(User_Id) FROM Consumo WHERE VSA <> 'CL0')\n",
-    "WHERE Name = 'VSA';\n",
-    "\n",
-    "UPDATE ConsumedAtLeastOnce\n",
-    "SET Percentage = (CAST(AtLeastOnce AS FLOAT) / \n",
-    "                  CAST((SELECT COUNT(User_Id) FROM Consumo) AS FLOAT\n",
-    "                      ))*100;\n",
-    "\n",
-    "SELECT * FROM ConsumedAtLeastOnce;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Quantos usuários usaram alguma droga ilícita no último mês e quantos não usaram?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DROP TABLE UsaIlicitas IF EXISTS;\n",
-    "DROP VIEW UsaIlicitasId IF EXISTS;\n",
-    "\n",
-    "CREATE TABLE UsaIlicitas (\n",
-    "    User_Id VARCHAR(5) NOT NULL,\n",
-    "    UsaIlicita BOOLEAN DEFAULT false,\n",
-    "    FOREIGN KEY(User_Id)\n",
-    "        REFERENCES Usuario(Id)\n",
-    "            ON DELETE NO ACTION\n",
-    "            ON UPDATE NO ACTION\n",
-    ");\n",
-    "\n",
-    "INSERT INTO UsaIlicitas (User_Id)\n",
-    "SELECT Id FROM Usuario;\n",
-    "\n",
-    "CREATE VIEW UsaIlicitasId AS\n",
-    "SELECT C.User_Id FROM Consumo C WHERE \n",
-    "C.Amphet = 'CL4' OR C.Amphet ='CL5' OR C.Amphet ='CL6' OR\n",
-    "C.Benzos = 'CL4' OR C.Benzos ='CL5' OR C.Benzos ='CL6' OR\n",
-    "C.Cannabis = 'CL4' OR C.Cannabis ='CL5' OR C.Cannabis ='CL6' OR\n",
-    "C.Coke = 'CL4' OR C.Coke ='CL5' OR C.Coke ='CL6' OR\n",
-    "C.Crack = 'CL4' OR C.Crack ='CL5' OR C.Crack ='CL6' OR\n",
-    "C.Ecstasy = 'CL4' OR C.Ecstasy ='CL5' OR C.Ecstasy ='CL6' OR\n",
-    "C.Heroin = 'CL4' OR C.Heroin ='CL5' OR C.Heroin ='CL6' OR\n",
-    "C.Legalh = 'CL4' OR C.Legalh ='CL5' OR C.Legalh ='CL6' OR\n",
-    "C.LSD = 'CL4' OR C.LSD ='CL5' OR C.LSD ='CL6' OR\n",
-    "C.Meth = 'CL4' OR C.Meth ='CL5' OR C.Meth ='CL6' OR\n",
-    "C.Mushrooms = 'CL4' OR C.Mushrooms ='CL5' OR C.Mushrooms ='CL6' OR\n",
-    "C.VSA = 'CL4' OR C.VSA ='CL5' OR C.VSA ='CL6';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "UPDATE UsaIlicitas Ui SET Ui.UsaIlicita = true \n",
-    "WHERE EXISTS (SELECT Uid.User_Id FROM UsaIlicitasId Uid WHERE Ui.User_Id = Uid.User_Id);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91042c00-c1b4-47f3-a1aa-847fd00f8749",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "SELECT UsaIlicita, COUNT(UsaIlicita) NumeroUsuarios FROM UsaIlicitas GROUP BY UsaIlicita;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Quantos usuários consumiram álcool no último dia?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "505"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SELECT COUNT(*) AlcoolUltimoDia\n",
-    "FROM Consumo C\n",
-    "GROUP BY C.Alcohol\n",
-    "HAVING C.Alcohol = 'CL6';"
+    "* ou redes complexas baseadas, por exemplo, em um grafo de coocorrência;\n",
+    "* caminhos no grafo;\n",
+    "* árvores ou grafos orientados acíclicos, a exemplo de taxonomias."
    ]
   },
   {
@@ -654,90 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Pessoas que possuem uma pontuação no traço de personalidade neuroticismo maior do que a média tendem a usar mais drogas ilícitas recentemente?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "375"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SELECT COUNT(*) N_Usam_DrogaIlicita\n",
-    "FROM Personalidade P, UsaIlicitasId U\n",
-    "WHERE P.Nscore < '-1.55078' AND P.User_Id = U.User_Id;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Quantos e qual a porcentagem dos usuarios de drogas com mais frequencia sao jovens?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "526"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SELECT COUNT(Uid.User_Id) FROM UsaIlicitasId Uid, Usuario U\n",
-    "WHERE Uid.User_Id = U.Id AND U.Age = -0.95197;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5297079556898288"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SELECT(\n",
-    "CAST(\n",
-    "(\n",
-    "\tCAST(\n",
-    "\t(SELECT COUNT(Uid.User_Id) FROM UsaIlicitasId Uid, Usuario U\n",
-    "\tWHERE Uid.User_Id = U.Id AND U.Age = -0.95197) \n",
-    "\tAS FLOAT)\n",
-    "\t/\n",
-    "\tCAST(\n",
-    "\t(SELECT COUNT(User_Id) FROM UsaIlicitasId) \n",
-    "\tAS FLOAT) \n",
-    ")\n",
-    "AS FLOAT)\n",
-    ");"
+    "* "
    ]
   }
  ],
